# project5

./: __init__.py  core.py  pyproject.toml
.github/workflows/: trigger.yml
